<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NombreCompleto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="408dp"
        android:layout_height="44dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Telefono"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Descripcion"
        android:inputType="textMultiLine"
        android:lines="2"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="361dp"
        android:layout_height="63dp"
        android:text="@string/btnSiguiente"
        android:theme="@style/MiBotonRaized"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946" />

    <DatePicker
        android:id="@+id/dpFecha"
        android:layout_width="304dp"
        android:layout_height="277dp"
        android:calendarViewShown="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:layout_width="114dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/FechaNac"
        app:layout_constraintBottom_toBottomOf="@+id/dpFecha"
        app:layout_constraintEnd_toEndOf="@+id/dpFecha"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/dpFecha"
        app:layout_constraintTop_toTopOf="@+id/dpFecha"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
